@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction

class Plataforma {
  -String designacao
}

class Organizacao {
  -String nome
  -String NIF
  -String website
  -String telefone
  -String email
}

class Colaborador {
  -String nome
  -String funcao
  -String telefone
  -String email
}

class EnderecoPostal {
  -String local
  -String codPostal
  -String localidade
}


class Utilizador {
  -String nome
  -String email
  -String password
}


Plataforma "1" -- "*" Organizacao : tem registadas >
Organizacao "1" -- "1..*" Colaborador: tem >
Organizacao "1" -- "1" Colaborador: tem gestor >
Organizacao "1" -- "1" EnderecoPostal: localizada em >
Colaborador "0..1" -- "1" Utilizador: atua como >
@enduml
